@@ -937,6 +937,7 @@ Release_Notes/en-US/Release_Notes.ent
 Release_Notes/en-US/Release_Notes.xml
 Release_Notes/en-US/Revision_History.xml
 Release_Notes/publican.cfg
+rpm_templates/desktop-spec.tmpl
 rpm_templates/spec.tmpl
 rpm_templates/splash.tmpl
 t/000.load.t
