@@ -616,9 +616,6 @@ sub package {
     $self->{publican}->{config}->param( 'xml_lang', $lang );
 
     my $common_config = $self->{publican}->param('common_config');
-    my $xsl_file      = $common_config . "/xsl/web-spec.xsl";
-    $xsl_file = $common_config . "/xsl/dt_htmlsingle_spec.xsl" if ($desktop);
-    $xsl_file =~ s/"//g;    # windows
     my $license       = $self->{publican}->param('license');
     my $brand         = lc( $self->{publican}->param('brand') );
     my $doc_url       = $self->{publican}->param('doc_url');
@@ -783,7 +780,10 @@ sub package {
     $spec_name = "$tmp_dir/rpm/$name_start-$lang.spec"
         if ( $desktop or $short_sighted );
 
-    $self->{template}->process( 'spec.tmpl', \%vars, $spec_name,
+    my $spec_tmpl = 'spec.tmpl';
+    $spec_tmpl = 'desktop-spec.tmpl' if ( $desktop);
+
+    $self->{template}->process( $spec_tmpl, \%vars, $spec_name,
         binmode => ':encoding(UTF-8)' )
         or croak( $self->{template}->error() );
 
